# spren

./: .gitignore  Cargo.toml  IMMEDIATE_ROADMAP.md  INTEGRATED_ROADMAP.md  LICENSE  README.md  ROADMAP.md  login.html  prime_factors.py  print_time.ps1  shell.rs  sysinfo.bat  test-usage.txt
.github/workflows/: release.yml
docs/: index.html
project_analysis/: structure.xml
scripts/: run_tests.sh
spren_output/: index.html
src/: README.md  ai.rs  config.rs  debugger.rs  executor.rs  git.rs  git_assistant.rs  intent.rs  lib.rs  main.rs  path_manager.rs  performance.rs  platform.rs  project_analyzer.rs  shell.rs  theme.rs
src/ai/: error.rs  mod.rs  path_utils.rs  response.rs  schema.rs  tests.rs
src/analysis/: dependencies.rs  framework.rs  language.rs  mod.rs
src/analysis/tests/: dependency_tests.rs  framework_tests.rs
src/code/: mod.rs
src/executor/: chain.rs  mod.rs  validation.rs
src/executor/history/: mod.rs
src/git/: git_assistant.rs  mod.rs
src/intent/: executor.rs  matcher.rs  mod.rs  parameters.rs
src/telemetry/: mod.rs  storage.rs
src/tests/: README.md  command_chain.rs  error_handling.rs  integration.rs  mod.rs  performance.rs  telemetry.rs  validation.rs
src/tools/: code_generator.rs  docker.rs  git.rs  kubernetes.rs  mod.rs
~/.config/spren/: config.toml
