[package]
name = "spren"
version = "0.1.1"
edition = "2021"
description = "An AI-powered shell assistant that helps with command-line operations"
authors = ["Shubhankar Madgulkar <shubhankar2205@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/smadgulkar/spren"
repository = "https://github.com/smadgulkar/spren"
keywords = ["cli", "ai", "assistant", "shell", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
dotenv = "0.15"
toml = "0.8.19"
dirs = "5.0.1"
directories = "5.0"
validator = { version = "0.16", features = ["derive"] }
schemars = "0.8"
mockito = "1.2"
which = "4.4"
criterion = { version = "0.5", features = ["async_tokio"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.4"
glob = "0.3"
tokei = "12.1"
serde_yaml = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true      # Automatically strip symbols from the binary
panic = "abort"   # Remove panic unwinding code

[[bin]]
name = "spren"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
test-log = "0.2"
tempfile = "3.2"
mockito = "0.31"
criterion = "0.4"
env_logger = "0.9"
cargo-tarpaulin = "0.25"  # For code coverage
pretty_assertions = "1.3" # For better test failure messages
