[package]
name = "spren"
version = "0.1.1"
edition = "2021"
description = "An AI-powered shell assistant that helps with command-line operations"
authors = ["Shubhankar Madgulkar <shubhankar2205@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/smadgulkar/spren"
repository = "https://github.com/smadgulkar/spren"
keywords = ["cli", "ai", "assistant", "shell", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "spren"
path = "src/lib.rs"

[[bin]]
name = "spren"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
dotenv = "0.15"
toml = "0.8.19"
dirs = "5.0.1"
directories = "5.0"
validator = { version = "0.16", features = ["derive"] }
schemars = "0.8"
mockito = "1.2"
which = "4.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true  # Automatically strip symbols from the binary
panic = "abort"  # Remove panic unwinding code