[package]
name = "spren"
version = "0.1.1"
edition = "2021"
description = "An AI-powered shell assistant that helps with command-line operations"
authors = ["Shubhankar Madgulkar <shubhankar2205@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/smadgulkar/spren"
repository = "https://github.com/smadgulkar/spren"
keywords = ["cli", "ai", "assistant", "shell", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
dotenv = "0.15"
toml = "0.8.19"
dirs = "5.0.1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true      # Automatically strip symbols from the binary
panic = "abort"   # Remove panic unwinding code

[[bin]]
name = "spren"
path = "src/main.rs"
